--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shreya Shandilya | Web Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch:wght@100;200;300;400;500;531;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="img/logo2.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -110,7 +111,7 @@
              strings: [
                  'Web Designer.', 
                  'Web Developer.',
-                 'Freelancer.'
+                 'Software Engineer.'
                  ],
              typeSpeed:60,
              backSpeed:60,
