--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         });
     </script>
     <script src="js/app.js"></script>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var marker = document.querySelector('#marker');
         var item = document.querySelectorAll('nav a');
 
@@ -132,8 +132,8 @@
             link.addEventListener('click',(e) => {
                 indicator(e.target);
             });
-        });
-    </script>
+        }); -->
+    <!-- </script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script>
         setTimeout(function(){
