--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="line"></div>
             <div class="line"></div>
         </div>
-        <div id="marker"></div>
+        <!-- <div id="marker"></div> -->
         <ul class="nav-links active">
             <li>01.<a href="#about">About</a></li>
             <li>02.<a href="#">Experience</a></li>
