--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="nav-links active">
             <li>01.<a href="#about">About</a></li>
             <li>02.<a href="#">Experience</a></li>
-            <li>03.<a href="#">Work</a></li>
+            <li>03.<a href="#work">Work</a></li>
             <li>04.<a href="#contact">Contact</a></li>
             <li><a id="github" href="https://github.com/shreya991" target="_blank">Github</a></li>
         </ul>
@@ -69,7 +69,7 @@
     </section>
 
     <!-- Open Source Projects -->
-    <section class="Section-sc-4hj21z-0 projects__StyledContainer-sc-1v1fime-0 hXEqdP">
+    <section id="work" class="Section-sc-4hj21z-0 projects__StyledContainer-sc-1v1fime-0 hXEqdP">
         <h4 class="projects__StyledTitle-sc-1v1fime-1 jUYiNF" data-sr-id="7" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;">OpenSource Projects</h4>
        <div class="pack">
            <div class="cards">
