fixed the navbar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         </div>
     </div>
+    <header class="brHOCd">
     <nav>
         <logo class="logo"></logo>
         <div class="hamburger">
@@ -23,17 +24,22 @@
             <div class="line"></div>
         </div>
         <!-- <div id="marker"></div> -->
-        <ul class="nav-links active">
+        <div class="nav__StyledLink-ghklvd-6 dHbeLh">
+        <ul class="nav-links fKHcAI  active">
             <li>01.<a href="#about">About</a></li>
             <li>02.<a href="#">Experience</a></li>
             <li>03.<a href="#work">Work</a></li>
             <li>04.<a href="#contact">Contact</a></li>
             <li><a id="github" href="https://github.com/shreya991" target="_blank">Github</a></li>
         </ul>
+    </div>
     </nav>
+  </header>
+  <div class="myself">
     <h1 id="intro">Hi, my name is</h1>
     <h1 id="name1">Shreya Shandilya.</h1>
     <h1 id="name2">I build things for the web.</h1>
+</div>
     <section class="landing">
         
         <h2 id="trailor">I am a <span class="type"></span></h2>
