--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <!-- <div id="marker"></div> -->
         <div class="nav__StyledLink-ghklvd-6 dHbeLh">
         <ul class="nav-links fKHcAI  active">
-            <li>01.<a href="#about">About</a></li>
-            <li>02.<a href="#">Experience</a></li>
-            <li>03.<a href="#work">Work</a></li>
-            <li>04.<a href="#contact">Contact</a></li>
+            <li>01.<a id="no1" href="#about">About</a></li>
+            <li>02.<a id="no2" href="#">Experience</a></li>
+            <li>03.<a id="no3" href="#work">Work</a></li>
+            <li>04.<a id="no4" href="#contact">Contact</a></li>
             <li><a id="github" href="https://github.com/shreya991" target="_blank">Github</a></li>
         </ul>
     </div>
@@ -39,7 +39,7 @@
     <h1 id="intro">Hi, my name is</h1>
     <h1 id="name1">Shreya Shandilya.</h1>
     <h1 id="name2">I build things for the web.</h1>
-</div>
+   </div>
     <section class="landing">
         
         <h2 id="trailor">I am a <span class="type"></span></h2>
